# hijack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  trampo.txt
src/hijack/: CMakeLists.txt  OrbitMinHook.c  OrbitMinHook.h
src/hijk/: CMakeLists.txt  Orbit.asm  OrbitAsm.cpp  OrbitAsm.h  OrbitAsmC.h  OrbitMinHook.c  OrbitMinHook.h  hijk.asm  hijk.cpp  main.cpp
src/hijk/include/hijk/: hijk.h
